Update Capstone 5_Unsupervised Learning _Twitter_Topic Modeling (2).ipynb

--- a/Capstone 5_Unsupervised Learning _Twitter_Topic Modeling (2).ipynb
+++ b/Capstone 5_Unsupervised Learning _Twitter_Topic Modeling (2).ipynb
@@ -20,44 +20,14 @@
     "\n",
     "## Methodology: \n",
     "\n",
-    "#### 1\n",
-    "Clean tweets to review sentiment.\n",
-    "#### 2\n",
-    "Use vocabulary based on Textblob library, which includes its own biases, to measure 'polarity', 'subjectivity', 'posivity', 'negativity', and 'neutral'. \n",
-    "\n",
-    "#### 3\n",
-    "We could use a LSA used to compare how similar the tweets are to one another in the dataset since that is unlabeled. \n",
-    "\n",
-    "#### 4\n",
-    "Split tweets into training and test data sets to see how similar his tweets are to another--we are looking for content consistency. \n",
-    "\n",
-    "#### 5\n",
-    "We could  use Word2Vec and plot using t-SNE cluster on out Twitter dataset to determine which phrases appear the most frequently in tweets to compare with whether they have been retweeted or flagged.\n",
+    \n"1: Select 200 tweets, download and read into JSON. Save to directory on GitHub. Upload for use by reading back from JSON. \n" \n" 2: Clean tweets to review for words, topics, and sentiment. Remove puncuation, unusual characters, and focus on english by removing Farsi script. Although farsi_itertools is available to sort through second language, reserve this practice after using on this sample data set of 200 tweets.
+\n" 3: Break tweets down into a matrix of vectors through TFIDF function.\n" 
+\n" 4: Conduct topic modeling by using two unsupervised learning methods: Latent Direllect Association and Non-negative Matrix Factorization.
+\n" 5: We use a Latent Semantic Analsys model used to compare how similar the tweets (as vectors) are to one another in the dataset since that is unlabeled. Use vocabulary based on Textblob library, which includes its own biases, to measure 'polarity', 'subjectivity', 'posivity', 'negativity', and 'neutral'. Split tweets into training and test data sets to see how similar his tweets are to another--we are looking for content consistency.
+\n" 6: Compare results to select preferred model and discuss in conclusion. Recommend next steps.\n",
     "\n",
     "## Summary of Results:\n",
-    "We see that Javed Zarif has 1584269 followers.\n",
-    "\n",
-    "As mentioned earlier, this Twitter account’s sample (@Jzarif) of 200 tweets reflects mostly positive tweets as shown. (http://www.pitapolicy.com/twitter-sentiment-analysis-of-iranian-foreign-minister-javed-zarif/) We again see it in the more recent graph shown in green representing mostly positive tweets during crisis. Approximately 75 percent of the tweets are positive, thus 25 percent are neutral.\n",
-    "\n",
-    "We measured both ‘subjectivity’ and ‘polarity’ and see that Javed’s tweets concentrate between -0.2 and .4 on the ‘polarity’ and skew positively.\n",
-    "\n",
-    "These were the top 10 hashtags and themes trending in Washington, DC at that time:\n",
-    "* Biden \n",
-    "* Lebanon \n",
-    "* Hiroshima \n",
-    "* #BB22\n",
-    "* #FOURTHCOUNTDOWN \n",
-    "* The NRA \n",
-    "* Pence \n",
-    "* Lakers \n",
-    "* Letitia James \n",
-    "* Independence Day\n",
-    "\n",
-    "After completing TFIDF, we constructed an LSA model to identify semantic analysis. We see that there's little difference between the train and test sets of LSA samples. As such, PITAPOLICY concludes that the Twitter user is consistent about his messages. \n",
-    "\n",
-    "Regarding more unsupervised techniques, like clustering: we employed 'K-means', 'DBSAN', and 'T-SNE'. T-SNE ploted more clustered topics than K-Means. DBSCAN cluster showed the least promising results.\n",
-    "\n",
-    "In future, we will use TFIDF to compare topic modeling results using Latent Dirichlect Allocation and Non-negative Matrix Formation (NNMF)."
+    " See attached document for summary."
    ]
   },
   {
@@ -172,8 +142,8 @@
     "    #consumer_key = \"\"\n",
     "    #consumer_secret = \"\"\n",
     "\n",
-    "consumer_key = 'R8y38TnjdzbUMhXmiqrdOlFNo'\n",
-    "consumer_secret = '0SHVRVqighg3nbvU72303AVCNmyue6usBukhB7xiUZlL5wo3nE' \n",
+    "consumer_key = 'Your Key Here'\n",
+    "consumer_secret = 'Your Key Here' \n",
     "\n",
     "auth = tweepy.AppAuthHandler(consumer_key, consumer_secret)\n",
     "api = tweepy.API(auth)"
@@ -1863,7 +1833,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Link to Semantic Analysis: Checking Tweets' similarity to each other."
+    "# Link to Semantic Analysis: Checking Tweets' similarity to each other." https://nbviewer.jupyter.org/github/pitaconsumer/Capstone-5/blob/master/Capstone%205_Unsupervised%20Learning%20_Twitter_Build%20A%20Semantic%20Analysis%20%282%29.ipynb 
    ]
   }
  ],
