Update Capstone 5_Unsupervised Learning _Twitter_Topic Modeling (3).ipynb

--- a/Capstone 5_Unsupervised Learning _Twitter_Topic Modeling (3).ipynb
+++ b/Capstone 5_Unsupervised Learning _Twitter_Topic Modeling (3).ipynb
@@ -128,8 +128,8 @@
     "    #consumer_key = \"\"\n",
     "    #consumer_secret = \"\"\n",
     "\n",
-    "consumer_key = 'R8y38TnjdzbUMhXmiqrdOlFNo'\n",
-    "consumer_secret = '0SHVRVqighg3nbvU72303AVCNmyue6usBukhB7xiUZlL5wo3nE' \n",
+    "consumer_key = 'Your Key Here.'\n",
+    "consumer_secret = 'Your Secret Here.' \n",
     "\n",
     "auth = tweepy.AppAuthHandler(consumer_key, consumer_secret)\n",
     "api = tweepy.API(auth)"
